# NSTC

./: .dockerignore  .gitignore  MANUAL.md  Makefile  OPERATION.md  README.md  SYSTEM.md  course_car.html  docker-compose.yml  index.html  start.sh  系統未完成項目總覽.docx  系統未完成項目總覽.md
NSTC/firmware/main/: CMakeLists.txt  Kconfig.projbuild  device_registry.h  imu_driver.h  main.c  ota_client.h  websocket_client.c  wifi_config_nvs.c  wifi_config_nvs.h  wifi_manager.c
backend/: .env.example  Dockerfile  alembic.ini  hmeayc.db  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 01d302e27d4a_add_group_name_course_evaluation.py  43ccd6419255_add_audit_log_and_parent_consent_tables.py  6f11ca848bb2_add_rbac_models_and_org_id_fks.py  7a1c8c2f4d1b_add_report_markdown_pdf_path.py  93cb4934e020_add_wifi_fields_to_device.py  a1b2c3d4e5f6_add_music_url_to_sessions.py  a8e38b8cee72_add_course_and_course_template_models.py  b3c4d5e6f7a8_add_device_id_to_wifi_config.py  bfe047c97e6c_initial.py  c4d5e6f7a8b9_fix_music_bpm_duration_float.py  d2e3f4a5b6c7_fix_schema_consistency.py  e5f6a7b8c9d0_add_device_token_hash.py  f1a2b3c4d5e6_add_class_code_column.py  f7e2a1b3c4d5_add_music_columns_to_sessions.py
backend/app/: auth.py  cli.py  config.py  crypto.py  email.py  main.py  music.py  pairing.py  paths.py  pipeline.py  timecode.py  viz.py
backend/app/analysis/: freeze_dance.py  imu_utils.py  macro.py  metrics.py  micro.py  realtime.py  realtime_video.py  rhythm.py
backend/app/api/: admin.py  assessments.py  auth.py  compliance.py  config.py  courses.py  devices.py  firmware.py  pairing.py  reports.py  sessions.py  templates.py  video_analysis.py  ws.py
backend/app/auth/: __init__.py  api_key.py  deps.py  jwt.py  org.py
backend/app/db/: __init__.py  base.py
backend/app/gemini/: client.py  prompts.py
backend/app/ingest/: segment.py
backend/app/models/: __init__.py  analysis_result.py  assessment_result.py  audit_log.py  child.py  course.py  course_evaluation.py  course_template.py  device.py  device_assignment.py  firmware.py  imu_data.py  organization.py  parent_child.py  user.py  (+8 more)
backend/scripts/: import_pdf.py
backend/tests/: test_basic.py  test_gemini.py
firmware/main/: CMakeLists.txt  Kconfig.projbuild  battery.c  battery.h  ca_cert.h  device_registry.c  device_registry.h  idf_component.yml  imu_driver.c  imu_driver.h  led_status.c  led_status.h  main.c  ota_client.c  ota_client.h  session_config_nvs.c  session_config_nvs.h  softap_portal.c  softap_portal.h  websocket_client.c  websocket_client.h  wifi_config_nvs.c  wifi_config_nvs.h  wifi_manager.c  wifi_manager.h
(+143 files in other folders)
